--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ body {
 
 .search__input-active {
    border: 1px solid;
+   border-radius: 10px;
 }
 
 .authorization {
@@ -122,13 +123,14 @@ body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
-   gap: 30px;
+   gap: 60px;
    padding-left: 4px;
 }
 
 .nav__link {
    font-size: 22px;
    color: #3A3A3A;
+   opacity: 0.8;
    transition: ease 0.3s color;
 }
 
@@ -150,7 +152,8 @@ body {
    padding: 5px 9px;
    border-radius: 40px;
    margin-left: 6px;
-   top: 5px;
+   top: 50%;
+   transform: translateY(-50%);
 }
 
 .title {
@@ -382,9 +385,9 @@ body {
    font-weight: 400;
    position: absolute;
    top: 0;
-   right: 11px;
+   right: 0;
    padding: 0;
-   color: #c40b0b;
+   color: #ECCA7B;
 }
 
 #popupoverlay {
@@ -489,6 +492,7 @@ iframe {
 
 .modal .search__input {
    border: 1px solid;
+   border-radius: 10px;
 }
 /*-----------БУРГЕР КОНЕЦ-------------*/
 
@@ -676,6 +680,11 @@ iframe {
    .about {
       transform: rotate(0);
    }
+
+   iframe {
+      height: 50vh;
+   }
+
 }
 
 
